--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -51,7 +51,7 @@
   <br>
   我持有中国传媒大学的工商管理本科学位（2016）、伦敦艺术大学传媒学院的视觉传达设计研究生文凭（优秀，2018）和平面媒体设计硕士学位（优秀，2020）。
   <br>
-  我目前可以接手远程的艺术与设计项目，如您需要雇佣自由职业设计师或有项目合作需求，亦或是感兴趣想要聊聊天，请通过微信或电子邮箱联系我。
+  我目前可以接手远程的艺术与设计项目，如您需要雇佣自由职业设计师或有项目合作需求，亦或是感兴趣想聊聊天，请通过微信或邮件联系我。
   <br>
   微信账号：norazhaodesign
   <br style="margin-bottom: 0;">
