--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -69,13 +69,20 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/glitch-room/1.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/2.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/3.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/4.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/5.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/6.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
-  <img src="/img/glitch-room/7.jpg" alt="GLITCH ROOM 故障房间 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/display.jpg" alt="GLITCH ROOM WEBSITE 故障房间网页 · NORA ZHAO 赵子娴">
+</div>
+
+<h6 class="en imgDescription">△ Homepage and model customisation page from glitchroom.com.</h6>
+<h6 class="zh imgDescription">△ 故障房间网站首页与模型自定义页面。</h6>
+
+<div class="grid1">
+  <img src="/img/glitch-room/1.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/2.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/3.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/4.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/5.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/6.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
+  <img src="/img/glitch-room/7.jpg" alt="GLITCH ROOM GENERATED PATTERN 故障房间生成图纹 · NORA ZHAO 赵子娴">
 </div>
 
 <h6 class="en imgDescription">△ Screenshots of 3D models in VR view.</h6>
