--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -28,7 +28,7 @@
 <h1 class="zh">书籍和小册子</h1>
 
 <div class="grid1">
-  <img src="/img/machine-translation/0.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
+  <img src="/img/machine-translation/3.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -40,35 +40,13 @@
 </p>
 <p class="zh indent bodyText">
   这本小册子使用了罗伯特·普鲁奇克（Robert Plutchik）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
-<div class="grid2 gridxto1">
+<div class="grid1">
   <img src="/img/emotional-words/1.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/2.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/3.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/4.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/5.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/6.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
-</div>
-
-<h2 class="en indent">Ascent</h2>
-<h2 class="zh indent">Ascent</h2>
-
-<p class="en indent bodyText">
-  Digital brochure design for a digital transformation company (Ascent) as part of their brand identity.
-  <br>
-  By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.</p>
-<p class="zh indent bodyText">
-  这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
-  <br>
-  Ascent的团队专门从事软件产品开发、数据工程、商业智能、高级分析、数据科学和IoT（物联网）解决方案，通过联结数据、软件和目标，帮助包括智能家居设备、太空探索、制造业、金融、生态和物流在内的各行各业品牌领导者建立新功能并释放价值。
-</p>
-
-<div class="grid1">
-  <img src="/img/ascent/1.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/2.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/3.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/4.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/6.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
-  <img src="/img/ascent/5.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">Machine Translation</h2>
@@ -86,6 +64,28 @@
   <img src="/img/machine-translation/2.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
   <img src="/img/machine-translation/3.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
   <img src="/img/machine-translation/4.jpg" alt="MACHINE TRANSLATION BOOKLET 机器翻译手册 · NORA ZHAO 赵子娴">
+</div>
+
+<h2 class="en indent">Ascent</h2>
+<h2 class="zh indent">Ascent</h2>
+
+<p class="en indent bodyText">
+  Digital brochure design for a digital transformation company (Ascent) as part of its brand identity.
+  <br>
+  By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.</p>
+<p class="zh indent bodyText">
+  这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
+  <br>
+  Ascent的团队专门从事软件产品开发、数据工程、商业智能、高级分析、数据科学和IoT（物联网）解决方案，通过联结数据、软件和目标，帮助包括智能家居设备、太空探索、制造业、金融、生态和物流在内的各行各业品牌领导者建立新功能并释放价值。
+</p>
+
+<div class="grid1">
+  <img src="/img/ascent/1.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/2.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/3.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/4.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/6.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
+  <img src="/img/ascent/5.jpg" alt="ASCENT DIGITAL BROCHURE DESIGN 电子刊物设计 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">The Letter Evolution</h2>
