--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -28,7 +28,7 @@
 <h1 class="zh">EF-AP</h1>
 
 <div class="grid1">
-  <img src="/img/efap/1.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
+  <img src="/img/ef-ap/1.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -52,10 +52,10 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/efap/2.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
-  <img src="/img/efap/3.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
-  <img src="/img/efap/4.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
-  <img src="/img/efap/5.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
+  <img src="/img/ef-ap/2.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
+  <img src="/img/ef-ap/3.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
+  <img src="/img/ef-ap/4.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
+  <img src="/img/ef-ap/5.jpg" alt="EF-AP · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
