--- a/navigation.html
+++ b/navigation.html
@@ -208,11 +208,11 @@
     <p class="en"><a href="/project/mini-sites.html">- Mini-Sites</a></p>
     <p class="zh"><a href="/project/mini-sites.html">- 微型网页</a></p>
 
-    <p class="en"><a href="/project/posters.html">- Posters</a></p>
-    <p class="zh"><a href="/project/posters.html">- 海报</a></p>
-
     <p class="en"><a href="/project/books-and-booklets.html">- Books and Booklets</a></p>
     <p class="zh"><a href="/project/books-and-booklets.html">- 书籍和小册子</a></p>
+
+    <p class="en"><a href="/project/posters-and-leaflets.html">- Posters and Leaflets</a></p>
+    <p class="zh"><a href="/project/posters-and-leaflets.html">- 海报和传单</a></p>
   </nav>
 </div>
 <style>
