--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -36,10 +36,10 @@
 <h2 class="zh indent">情感单词</h2>
 
 <p class="en indent bodyText">
-  Using Robert Plutchik’s diagram (1980), this booklet aims to explore the link between meaning and typography, especially those which are linked to human emotions by highlighting the enclosed space in written words.
+  This booklet aims to explore the link between meaning and typography, especially those which are linked to human emotions by highlighting the enclosed space in written words.
 </p>
 <p class="zh indent bodyText">
-  这本小册子使用了罗伯特·普鲁奇克（Robert Plutchik）的图表（1980），旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
+  这本小册子旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
 <div class="grid1">
   <img src="/img/emotional-words/1.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/2.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
@@ -112,14 +112,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/glitch-room.html">
+  <a href="/project/posters-and-leaflets.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-room.html main");
+      $("#nextPage").load("/project/posters-and-leaflets.html main");
     });
   </script>
 </div>
