--- a/project/mini-sites.html
+++ b/project/mini-sites.html
@@ -71,14 +71,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/posters.html">
+  <a href="/project/books-and-booklets.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/posters.html main");
+      $("#nextPage").load("/project/books-and-booklets.html main");
     });
   </script>
 </div>
