--- a/project/posters-and-leaflets.html
+++ b/project/posters-and-leaflets.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>POSTERS 海报 · NORA ZHAO 赵子娴</title>
+<title>POSTERS AND LEAFLETS 海报和传单 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -24,8 +24,8 @@
   本页面展示汇编的海报设计。
 </p>
 
-<h1 class="en">Posters</h1>
-<h1 class="zh">海报</h1>
+<h1 class="en">Posters and Leafets</h1>
+<h1 class="zh">海报和传单</h1>
 
 <div class="grid3">
   <img src="/img/geometry-on-display/1.jpg" alt="GEOMETRY ON DISPLAY POSTER DESIGN 几何展示海报设计 · NORA ZHAO 赵子娴">
@@ -56,14 +56,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/books-and-booklets.html">
+  <a href="/project/glitch-room.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/books-and-booklets.html main");
+      $("#nextPage").load("/project/glitch-room.html main");
     });
   </script>
 </div>
