--- a/project/rtw.html
+++ b/project/rtw.html
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Location: Shanghai, China
   <br class="listBreak">
-  Scope: Brand Positioning, Visual Identity System, Product Design, Brand Guidelines
+  Scope: Brand Positioning, Visual Identity System, Brand Guidelines
   <br class="listBreak">
   Year: 2019-2020
   <br class="dividerLine">
@@ -55,7 +55,7 @@
   <br class="listBreak">
   地点：中国上海
   <br class="listBreak">
-  范畴：品牌定位、视觉识别系统、产品设计、品牌指导手册
+  范畴：品牌定位、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
   <br class="dividerLine">
