--- a/about-and-contact.html
+++ b/about-and-contact.html
@@ -37,7 +37,7 @@
   <br>
   I hold a bachelor's degree in Business Administration (2016) from Communication University of China, a postgraduate diploma in Design for Visual Communications (merit, 2018) and a master's degree in Graphic Media Design (merit, 2020) from London College of Communication, University of the Arts London (UAL). I'm currently working as a freelancer.
   <br>
-  If you are interested, please send me an email for inquiry on any possible commission or collaboration.
+  If you are interested, please send me an email of inquiry about any possible commission or collaboration.
   <br>
   Email: norazhaodesign@gmail.com
   <br style="margin-bottom: 0;">
