--- a/project/byton.html
+++ b/project/byton.html
@@ -37,7 +37,7 @@
   <br class="listBreak">
   Location: Nanjing, China
   <br class="listBreak">
-  Scope: Visual Identity System, Brand Guidelines
+  Scope: visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
