--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -35,9 +35,9 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Interactive Webpage, Poster (A1)
+  Format: interactive webpage, printed poster (A1)
   <br class="listBreak">
-  Scope: Generative Typography, Grid Construction and Digitalisation, Poster Design
+  Scope: generative typography, grid construction and digitalisation, poster design
   <br class="listBreak">
   Year: 2018
   <br class="dividerLine">
@@ -47,7 +47,7 @@
 </p>
 
 <p class="zh indent bodyText">
-  形式：互动式网页、海报（A1）
+  形式：交互式网页、纸质海报（A1）
   <br class="listBreak">
   范畴：生成式字体、网格构建与数字化、海报设计
   <br class="listBreak">
