--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -33,9 +33,9 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Printed Book (A3)
+  Format: printed book (A3)
   <br class="listBreak">
-  Scope: Editorial Design
+  Scope: book design
   <br class="listBreak">
   Year: 2018
   <br class="dividerLine">
