--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -33,14 +33,15 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Printed Book
+  Format: printed book
   <br class="listBreak">
-  Scope: Editorial Design
+  Scope: book design
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
   A thesis by Carlos Romo-Melgar exploring the role of speculative graphic design in the expanded field of architectural publishing.
 </p>
+
 <p class="zh indent bodyText">
   形式：纸质书
   <br class="listBreak">
