--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -33,11 +33,11 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Generative Webpage
+  Format: generative webpage, screenshot images
   <br class="listBreak">
-  Scope: Generative Art, Glitch Art
+  Scope: generative art, glitch art
   <br class="listBreak">
-  Language and Library: HTML, CSS, JavaScript, Three.js
+  Language and Library: HTML, CSS, JavaScript, three.js
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
@@ -51,7 +51,7 @@
   <br class="listBreak">
   范畴：生成艺术、故障艺术
   <br class="listBreak">
-  编程语言与函数库：HTML、CSS、JavaScript、Three.js
+  编程语言与函数库：HTML、CSS、JavaScript、three.js
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
