--- a/project/omdia.html
+++ b/project/omdia.html
@@ -37,7 +37,7 @@
   <br class="listBreak">
   Location: London, UK
   <br class="listBreak">
-  Scope: Consumer Research, Brand Strategy, Naming, Visual Identity System, Brand Guidelines
+  Scope: consumer research, brand strategy, naming, visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019-2020
   <br class="dividerLine">
