--- a/project/posters-and-leaflets.html
+++ b/project/posters-and-leaflets.html
@@ -38,10 +38,24 @@
 <h2 class="zh indent">几何展示</h2>
 
 <p class="en indent bodyText">
+  Format: printed posters (A2)
+  <br class="listBreak">
+  Scope: poster design
+  <br class="listBreak">
+  Year: 2017
+  <br class="dividerLine">
   This set of posters aim at promoting a hypothetical exhibition about visual language and grammar at Kemistry Gallery, London.
   <br>
-  Each poster mianly shows pattern, shape and line in turn to reflect the theme of this event. Some elements go over the edges to achieve coherence.</p>
+  Each poster mianly shows pattern, shape and line in turn to reflect the theme of this event. Some elements go over the edges to achieve coherence.
+</p>
+
 <p class="zh indent bodyText">
+  形式：纸质海报（A2）
+  <br class="listBreak">
+  范畴：海报设计
+  <br class="listBreak">
+  时间：2017年
+  <br class="dividerLine">
   这组海报旨为伦敦的Kemistry画廊推广有关视觉语言和语法的虚构展览。
   <br>
   每张海报的分别依次展示图案、形状和线条以反映本次活动的主题。一些元素会越过边缘以实现海报之间的连贯性。
