--- a/project/rtw.html
+++ b/project/rtw.html
@@ -41,7 +41,7 @@
   <br class="listBreak">
   Location: Shanghai, China
   <br class="listBreak">
-  Scope: Brand Positioning, Visual Identity System, Brand Guidelines
+  Scope: brand positioning, visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019-2020
   <br class="dividerLine">
