--- a/project/visual-weather.html
+++ b/project/visual-weather.html
@@ -35,11 +35,11 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Data-Driven Webpage (Live)
+  Format: data-driven webpage (live)
   <br class="listBreak">
-  Scope: Generative Art, Glitch Art, Data Visualisation
+  Scope: generative art, glitch art, data visualisation
   <br class="listBreak">
-  Language and Library: HTML, CSS, JavaScript, Three.js
+  Language and Library: HTML, CSS, JavaScript, three.js
   <br class="listBreak">
   Year: 2019
   <br class="dividerLine">
@@ -53,7 +53,7 @@
   <br class="listBreak">
   范畴：生成艺术、故障艺术、数据可视化
   <br class="listBreak">
-  编程语言与函数库：HTML、CSS、JavaScript、Three.js
+  编程语言与函数库：HTML、CSS、JavaScript、three.js
   <br class="listBreak">
   时间：2019年
   <br class="dividerLine">
