--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -36,10 +36,24 @@
 <h2 class="zh indent">情感单词</h2>
 
 <p class="en indent bodyText">
-  This booklet aims to explore the link between meaning and typography, especially those which are linked to human emotions by highlighting the enclosed space in written words.
+  Format: printed booklet (hand-sewn)
+  <br class="listBreak">
+  Scope: book design
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
+  Exploration of the link between meaning and typography, especially those linked to human emotions by highlighting the enclosed space.
 </p>
 <p class="zh indent bodyText">
-  这本小册子旨在探讨含义与字形之间的联系，特别是通过标记出文字中的封闭空间来探索其与人类情感的相关性。</p>
+  形式：纸质小册子（手工线装）
+  <br class="listBreak">
+  范畴：书籍设计
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
+  探讨含义与字形之间的联系，通过标记出词语中的封闭空间来探索其与人类情感的相关性。
+</p>
+
 <div class="grid1">
   <img src="/img/emotional-words/1.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/2.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
@@ -53,10 +67,22 @@
 <h2 class="zh indent">机器翻译</h2>
 
 <p class="en indent bodyText">
-  This booklet aims to visualise the influence of machine translation by comparing a sample text and its translation iteration side by side with information highlighted.
+  Format: printed booklet (hand-sewn)
+  <br class="listBreak">
+  Scope: book design
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
+  Visualisation on machine translation's influence by comparing a sample text and its translation iteration side by side with information highlighted.
 </p>
 <p class="zh indent bodyText">
-  本手册旨在通过将示例文本及其迭代的机器翻译进行横向比较，用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
+  形式：纸质小册子（手工线装）
+  <br class="listBreak">
+  范畴：书籍设计
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
+  将示例文本及其迭代的机器翻译进行横向比较，并用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
 </p>
 
 <div class="grid1">
@@ -70,10 +96,23 @@
 <h2 class="zh indent">Ascent</h2>
 
 <p class="en indent bodyText">
+  Format: digital brochure
+  <br class="listBreak">
+  Scope: layout design
+  <br class="listBreak">
+  Year: 2020
+  <br class="dividerLine">
   Digital brochure design for a digital transformation company (Ascent) as part of its brand identity.
   <br>
-  By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.</p>
+  By connecting data, software and purpose, Ascent helps brand leaders across a broad range of industries build new capabilities and unlock value: from smart home devices, space exploration and beer to manufacturing, finance, ecology and logistics.
+</p>
 <p class="zh indent bodyText">
+  形式：电子刊物
+  <br class="listBreak">
+  范畴：版式设计
+  <br class="listBreak">
+  时间：2020年
+  <br class="dividerLine">
   这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
   <br>
   Ascent的团队专门从事软件产品开发、数据工程、商业智能、高级分析、数据科学和IoT（物联网）解决方案，通过联结数据、软件和目标，帮助包括智能家居设备、太空探索、制造业、金融、生态和物流在内的各行各业品牌领导者建立新功能并释放价值。
@@ -92,12 +131,24 @@
 <h2 class="zh indent">字母演化论</h2>
 
 <p class="en indent bodyText">
-  This booklet aims to demonstrate how pattern making techniques can be used to generate designs of typography and the matter of legibility.
+  Format: printed booklet (A6, hand-sewn)
+  <br class="listBreak">
+  Scope: book design
+  <br class="listBreak">
+  Year: 2019
+  <br class="dividerLine">
+  Demonstration on how pattern making techniques can be used to generate designs of typography, and the matter of legibility.
   <br>
   The letter "e", being the mostly used letter in English together with many other languages, was chosen for demonstration. Futura was applied due to its geometric form.
 </p>
 <p class="zh indent bodyText">
-  该手册旨在演示图案制作技术如何用于生成字体设计及其可识别性的问题。
+  形式：纸质小册子（A6、手工线装）
+  <br class="listBreak">
+  范畴：书籍设计
+  <br class="listBreak">
+  时间：2019年
+  <br class="dividerLine">
+  演示图案制作技术如何用于生成字体设计，及相关的文字可识别性的问题。
   <br>
   字母“e”作为英语以及许多其他语言中最常用的字母，在实验中被选中用于个例演示。Futura则是因其几何的设计在此作为字母“e”的字体。
 </p>
