--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -35,9 +35,9 @@
 </main>
 
 <p class="en indent bodyText">
-  Format: Interactive VR Website
+  Format: interactive website (with VR)
   <br class="listBreak">
-  Scope: Generative Art, Glitch Art, Virtual Reality
+  Scope: generative art, glitch art, virtual reality
   <br class="listBreak">
   Language and Library: HTML, CSS, JavaScript, A-Frame
   <br class="listBreak">
@@ -53,7 +53,7 @@
 </p>
 
 <p class="zh indent bodyText">
-  形式：交互式VR网站
+  形式：交互式网站（可步入虚拟现实）
   <br class="listBreak">
   范畴：生成艺术、故障艺术、虚拟现实
   <br class="listBreak">
