--- a/project/posters-and-leaflets.html
+++ b/project/posters-and-leaflets.html
@@ -24,7 +24,7 @@
   本页面展示汇编的海报设计。
 </p>
 
-<h1 class="en">Posters and Leafets</h1>
+<h1 class="en">Posters and Leaflets</h1>
 <h1 class="zh">海报和传单</h1>
 
 <div class="grid3">
