--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow">
     <p class="en indent headerText">
-      Artist and designer, practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
+      Artist and designer practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
     </p>
     <p class="zh indent headerText">
       实践于生成艺术、品牌识别和平面设计等领域的新媒体艺术家和设计师。刷新本页面以获取新视效。
