--- a/project/byton.html
+++ b/project/byton.html
@@ -40,6 +40,8 @@
   Scope: visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: collaborative project
   <br class="dividerLine">
   Byton is a an all-electric automotive brand established in 2017 and co-founded by former BMW and Nissan Motor executives. Their ambition goes beyond basic mobility, and is to create the next-generation smart device on wheels to seamlessly connect customer's digital life and make their time on the move more enjoyable.
   <br>
@@ -54,6 +56,8 @@
   范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：团队项目
   <br class="dividerLine">
   电动汽车品牌拜腾于2017年由前宝马和日产汽车高管共同创立。其愿景并非仅局限于汽车的基本运动性能方面，还在于创造能够无缝联结用户数字生活的智能设备，使人能够更好地享受旅途中的时光。
   <br>
