--- a/project/chinese-grid.html
+++ b/project/chinese-grid.html
@@ -40,6 +40,8 @@
   Scope: generative typography, grid construction and digitalisation, poster design
   <br class="listBreak">
   Year: 2018
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   In terms of making a new Chinese font, traditionally, designers shall construct and adjust each character manually with pre-designed component strokes. Unlike English where there are only a small number of alphabets and symbols, the Chinese character making process is to be repeated thousands of times due to its massive amount.
   <br>
@@ -52,6 +54,8 @@
   范畴：生成式字体、网格构建与数字化、海报设计
   <br class="listBreak">
   时间：2018年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   通常而言，产出一套中文字体的往往需要由设计师根据基本部件笔划进行对每个文字的手动拼写和调整。由于汉字字符数目巨大，这个过程通常要重复成千上万次，消耗巨大的人力成本。通过建立一个几何化的体系，本项目旨在探索和挑战传统的字体设计方法。
 </p>
