--- a/project/design-practice.html
+++ b/project/design-practice.html
@@ -38,6 +38,8 @@
   Scope: book design
   <br class="listBreak">
   Year: 2018
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   The contents of the publication are drawn from design practitioners (David Bennett, Rebecca May, Peter Chadwick and Kate McLean) whose work is situated in either a professional or an academic context.
 </p>
@@ -48,6 +50,8 @@
   范畴：书籍版式设计
   <br class="listBreak">
   时间：2018年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   该书的内容取材于四位设计师（David Bennett、Rebecca May、Peter Chadwick、Kate McLean）的演讲分享。他们的作品来自专业领域或学术领域。
 </p>
