--- a/project/ef-ap.html
+++ b/project/ef-ap.html
@@ -38,6 +38,8 @@
   Scope: book design
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   A thesis by Carlos Romo-Melgar exploring the role of speculative graphic design in the expanded field of architectural publishing.
 </p>
@@ -48,6 +50,8 @@
   范畴：书籍版式设计
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   本书由Carlos Romo-Melgar撰写，论文探讨了思辨设计在建筑出版的扩展领域中的应用。
 </p>
