--- a/project/glitch-pattern.html
+++ b/project/glitch-pattern.html
@@ -40,6 +40,8 @@
   Language and Library: HTML, CSS, JavaScript, three.js
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Z-fighting is a phenomenon in 3D rendering that occurs when two or more layers are positioned in identical or proximate positions. In such case, layers ‘fight’ with each other to be shown on screen pixels and results in a flickering rasterisation effect.
   <br>
@@ -54,6 +56,8 @@
   编程语言与函数库：HTML、CSS、JavaScript、three.js
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   深度冲突（z-fighting）是3D渲染中因两个或多个平面具有一致或极为接近的位置时产生的。在这种情形下，不同的平面相互竞争以显示在屏幕像素上，最终产生一种闪烁的栅格化效果。
 </p>
