--- a/project/glitch-room.html
+++ b/project/glitch-room.html
@@ -42,6 +42,8 @@
   Language and Library: HTML, CSS, JavaScript, A-Frame
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Glitch Room is an interactive website where users can design a 3D model and view it through VR, or visit and redesign existing models.
   <br>
@@ -60,6 +62,8 @@
   编程语言与函数库：HTML、CSS、JavaScript、A-Frame
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   故障房间是一个交互式网站，用户可以设计、访问和修改现有模型，并通过虚拟现实步入生成的空间以实现沉浸式视觉体验。
   <br>
