--- a/project/peacebird.html
+++ b/project/peacebird.html
@@ -40,6 +40,8 @@
   Scope: visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: collaborative project
   <br class="dividerLine">
   While maintaining the sans-serif approach and its unique visual characteristics, the new logotype maximises the simplicity of form to achive better legibility throughout applications of various sizes (especially on digital screens).
 </p>
@@ -51,6 +53,8 @@
   范畴：视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：团队项目
   <br class="dividerLine">
   在维持衬线字体及其独特视觉特征的前提下，最大限度地简化太平鸟的企业标识，使其能在各种尺寸的应用物上清晰显示（尤其是电子设备屏幕）。
 </p>
