--- a/project/posters-and-leaflets.html
+++ b/project/posters-and-leaflets.html
@@ -43,6 +43,8 @@
   Scope: poster design
   <br class="listBreak">
   Year: 2017
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   This set of posters aim at promoting a hypothetical exhibition about visual language and grammar at Kemistry Gallery, London.
   <br>
@@ -55,6 +57,8 @@
   范畴：海报设计
   <br class="listBreak">
   时间：2017年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   这组海报旨为伦敦的Kemistry画廊推广有关视觉语言和语法的虚构展览。
   <br>
