--- a/project/visual-weather.html
+++ b/project/visual-weather.html
@@ -42,6 +42,8 @@
   Language and Library: HTML, CSS, JavaScript, three.js
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   This model fetches the live weather data of designated city and transform those into aspects of the visuals. It means to give an intuitive interpretation of the weather visually and somewhat bridging other senses with sight.
   <br>
@@ -56,6 +58,8 @@
   编程语言与函数库：HTML、CSS、JavaScript、three.js
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   该模型通过获取指定城市的实时天气数据将其转换为视觉效果。这个实验志在通过视觉表现直观地诠释天气信息，将其他感官联系起来。
   <br>
