--- a/project/books-and-booklets.html
+++ b/project/books-and-booklets.html
@@ -41,6 +41,8 @@
   Scope: book design
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Exploration of the link between meaning and typography, especially those linked to human emotions by highlighting the enclosed space.
 </p>
@@ -50,6 +52,8 @@
   范畴：书籍设计
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   探讨含义与字形之间的联系，通过标记出词语中的封闭空间来探索其与人类情感的相关性。
 </p>
@@ -72,6 +76,8 @@
   Scope: book design
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Visualisation on machine translation's influence by comparing a sample text and its translation iteration side by side with information highlighted.
 </p>
@@ -81,6 +87,8 @@
   范畴：书籍设计
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   将示例文本及其迭代的机器翻译进行横向比较，并用几种颜色突出显示的文本所传达信息间的差异，以可视化机器翻译带来的影响。
 </p>
@@ -101,6 +109,8 @@
   Scope: layout design
   <br class="listBreak">
   Year: 2020
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Digital brochure design for a digital transformation company (Ascent) as part of its brand identity.
   <br>
@@ -112,6 +122,8 @@
   范畴：版式设计
   <br class="listBreak">
   时间：2020年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   这是为一家数字化转型公司（Ascent）设计的电子刊物，作为其品牌识别的一部分。
   <br>
@@ -136,6 +148,8 @@
   Scope: book design
   <br class="listBreak">
   Year: 2019
+  <br class="listBreak">
+  Type: independent project
   <br class="dividerLine">
   Demonstration on how pattern making techniques can be used to generate designs of typography, and the matter of legibility.
   <br>
@@ -147,6 +161,8 @@
   范畴：书籍设计
   <br class="listBreak">
   时间：2019年
+  <br class="listBreak">
+  类型：独立项目
   <br class="dividerLine">
   演示图案制作技术如何用于生成字体设计，及相关的文字可识别性的问题。
   <br>
