--- a/project/omdia.html
+++ b/project/omdia.html
@@ -40,6 +40,8 @@
   Scope: consumer research, brand strategy, naming, visual identity system, brand guidelines
   <br class="listBreak">
   Year: 2019-2020
+  <br class="listBreak">
+  Type: collaborative project
   <br class="dividerLine">
   Established in 2019, Omdia is the new global technology research powerhouse which combines the expertise of more than 400 analysts covering 150 markets and thousands of technology, media and telecommunications companies.
   <br>
@@ -54,6 +56,8 @@
   范畴：消费者研究、品牌策略、命名、视觉识别系统、品牌指导手册
   <br class="listBreak">
   时间：2019-2020年
+  <br class="listBreak">
+  类型：团队项目
   <br class="dividerLine">
   Omdia由Informa Tech旗下的市场分析公司Ovum、Heavy Reading、TracticaA与收购的IHS Markit合并而成。它拥有逾400名一流的分析师和咨询师，覆盖150个市场，每年收集3.95亿个数据点，出版3000多部研究报告。具备这样的研究广度和深度，通过“连接关键点”，Omdia能够有效地为整个科技生态圈的客户提供全方位研究和分析服务。
 </p>
