--- a/navigation.html
+++ b/navigation.html
@@ -163,56 +163,56 @@
     <p class="en type">Generative Art:</p>
     <p class="zh type">生成艺术：</p>
 
-    <p class="en"><a href="/project/glitch-room.html">- Glitch Room</a></p>
-    <p class="zh"><a href="/project/glitch-room.html">- 故障房间</a></p>
+    <p class="en"><a href="/work/glitch-room.html">- Glitch Room</a></p>
+    <p class="zh"><a href="/work/glitch-room.html">- 故障房间</a></p>
 
-    <p class="en"><a href="/project/glitch-pattern.html">- Glitch Pattern</a></p>
-    <p class="zh"><a href="/project/glitch-pattern.html">- 故障图纹</a></p>
+    <p class="en"><a href="/work/glitch-pattern.html">- Glitch Pattern</a></p>
+    <p class="zh"><a href="/work/glitch-pattern.html">- 故障图纹</a></p>
 
-    <p class="en"><a href="/project/visual-weather.html">- Visual Weather</a></p>
-    <p class="zh"><a href="/project/visual-weather.html">- 可视天气</a></p>
+    <p class="en"><a href="/work/visual-weather.html">- Visual Weather</a></p>
+    <p class="zh"><a href="/work/visual-weather.html">- 可视天气</a></p>
     <br>
 
     <p class="en type">Brand Identity:</p>
     <p class="zh type">品牌识别：</p>
 
-    <p class="en"><a href="/project/rtw.html">- RTW</a></p>
-    <p class="zh"><a href="/project/rtw.html">- RTW</a></p>
+    <p class="en"><a href="/work/rtw.html">- RTW</a></p>
+    <p class="zh"><a href="/work/rtw.html">- RTW</a></p>
 
-    <p class="en"><a href="/project/omdia.html">- Omdia</a></p>
-    <p class="zh"><a href="/project/omdia.html">- Omdia</a></p>
+    <p class="en"><a href="/work/omdia.html">- Omdia</a></p>
+    <p class="zh"><a href="/work/omdia.html">- Omdia</a></p>
 
-    <p class="en"><a href="/project/peacebird.html">- Peacebird</a></p>
-    <p class="zh"><a href="/project/peacebird.html">- 太平鸟</a></p>
+    <p class="en"><a href="/work/peacebird.html">- Peacebird</a></p>
+    <p class="zh"><a href="/work/peacebird.html">- 太平鸟</a></p>
 
-    <p class="en"><a href="/project/byton.html">- Byton</a></p>
-    <p class="zh"><a href="/project/byton.html">- 拜腾汽车</a></p>
+    <p class="en"><a href="/work/byton.html">- Byton</a></p>
+    <p class="zh"><a href="/work/byton.html">- 拜腾汽车</a></p>
     <br>
 
     <p class="en type">Graphic Design:</p>
     <p class="zh type">平面设计：</p>
 
-    <p class="en"><a href="/project/chinese-grid.html">- Chinese Grid</a></p>
-    <p class="zh"><a href="/project/chinese-grid.html">- 中文字形网格</a></p>
+    <p class="en"><a href="/work/chinese-grid.html">- Chinese Grid</a></p>
+    <p class="zh"><a href="/work/chinese-grid.html">- 中文字形网格</a></p>
 
-    <p class="en"><a href="/project/ef-ap.html">- EF-AP</a></p>
-    <p class="zh"><a href="/project/ef-ap.html">- EF-AP</a></p>
+    <p class="en"><a href="/work/ef-ap.html">- EF-AP</a></p>
+    <p class="zh"><a href="/work/ef-ap.html">- EF-AP</a></p>
 
-    <p class="en"><a href="/project/design-practice.html">- Design Practice</a></p>
-    <p class="zh"><a href="/project/design-practice.html">- 设计实践</a></p>
+    <p class="en"><a href="/work/design-practice.html">- Design Practice</a></p>
+    <p class="zh"><a href="/work/design-practice.html">- 设计实践</a></p>
     <br>
 
     <p class="en type">Other:</p>
     <p class="zh type">其他：</p>
 
-    <p class="en"><a href="/project/mini-sites.html">- Mini-Sites</a></p>
-    <p class="zh"><a href="/project/mini-sites.html">- 微型网页</a></p>
+    <p class="en"><a href="/work/mini-sites.html">- Mini-Sites</a></p>
+    <p class="zh"><a href="/work/mini-sites.html">- 微型网页</a></p>
 
-    <p class="en"><a href="/project/books-and-booklets.html">- Books and Booklets</a></p>
-    <p class="zh"><a href="/project/books-and-booklets.html">- 书籍和小册子</a></p>
+    <p class="en"><a href="/work/books-and-booklets.html">- Books and Booklets</a></p>
+    <p class="zh"><a href="/work/books-and-booklets.html">- 书籍和小册子</a></p>
 
-    <p class="en"><a href="/project/posters-and-leaflets.html">- Posters and Leaflets</a></p>
-    <p class="zh"><a href="/project/posters-and-leaflets.html">- 海报和传单</a></p>
+    <p class="en"><a href="/work/posters-and-leaflets.html">- Posters and Leaflets</a></p>
+    <p class="zh"><a href="/work/posters-and-leaflets.html">- 海报和传单</a></p>
   </nav>
 </div>
 <style>
