--- a/work/ef-ap.html
+++ b/work/ef-ap.html
@@ -66,14 +66,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/design-practice.html">
+  <a href="/work/design-practice.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/design-practice.html main");
+      $("#nextPage").load("/work/design-practice.html main");
     });
   </script>
 </div>
