--- a/work/glitch-pattern.html
+++ b/work/glitch-pattern.html
@@ -198,14 +198,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/visual-weather.html">
+  <a href="/work/visual-weather.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/visual-weather.html main");
+      $("#nextPage").load("/work/visual-weather.html main");
     });
   </script>
 </div>
