--- a/work/rtw.html
+++ b/work/rtw.html
@@ -78,14 +78,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/omdia.html">
+  <a href="/work/omdia.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/omdia.html main");
+      $("#nextPage").load("/work/omdia.html main");
     });
   </script>
 </div>
