--- a/work/design-practice.html
+++ b/work/design-practice.html
@@ -73,14 +73,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/mini-sites.html">
+  <a href="/work/mini-sites.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/mini-sites.html main");
+      $("#nextPage").load("/work/mini-sites.html main");
     });
   </script>
 </div>
