--- a/work/glitch-room.html
+++ b/work/glitch-room.html
@@ -108,14 +108,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/glitch-pattern.html">
+  <a href="/work/glitch-pattern.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-pattern.html main");
+      $("#nextPage").load("/work/glitch-pattern.html main");
     });
   </script>
 </div>
