--- a/work/omdia.html
+++ b/work/omdia.html
@@ -89,14 +89,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/peacebird.html">
+  <a href="/work/peacebird.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/peacebird.html main");
+      $("#nextPage").load("/work/peacebird.html main");
     });
   </script>
 </div>
