--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -70,14 +70,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/byton.html">
+  <a href="/work/byton.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/byton.html main");
+      $("#nextPage").load("/work/byton.html main");
     });
   </script>
 </div>
