--- a/work/posters-and-leaflets.html
+++ b/work/posters-and-leaflets.html
@@ -74,14 +74,14 @@
 
 <div class="pageDivider"></div>
 <div class="nextPageDiv">
-  <a href="/project/glitch-room.html">
+  <a href="/work/glitch-room.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/glitch-room.html main");
+      $("#nextPage").load("/work/glitch-room.html main");
     });
   </script>
 </div>
