--- a/work/visual-weather.html
+++ b/work/visual-weather.html
@@ -69,14 +69,14 @@
 <div class="pageDivider"></div>
 
 <div class="nextPageDiv">
-  <a href="/project/rtw.html">
+  <a href="/work/rtw.html">
     <p class="en nextText">Next Project</p>
     <p class="zh nextText">下个项目</p>
     <div id="nextPage"></div>
   </a>
   <script type="text/javascript">
     $(function() {
-      $("#nextPage").load("/project/rtw.html main");
+      $("#nextPage").load("/work/rtw.html main");
     });
   </script>
 </div>
