--- a/404.html
+++ b/404.html
@@ -12,7 +12,7 @@
 <div id="navigation"></div>
 <script type="text/javascript">
 $(function(){
-  $("#navigation").load("navigation.html");
+  $("#navigation").load("/navigation.html");
 });
 </script>
 
