--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
 <div class="row-container">
   <div class="firstRow" id="firstRow">
     <p class="en indent headerText">
-      Artist and designer practicing across the areas of generative art, brand identity and graphic design. Refresh for new visuals.
+      Artist and designer practicing across the areas of generative art, brand identity and graphic design. Refresh for random new visuals.
     </p>
     <p class="zh indent headerText">
-      实践于生成艺术、品牌识别和平面设计等领域的新媒体艺术家和设计师。刷新本页面以获取新视效。
+      实践于生成艺术、品牌识别和平面设计等领域的新媒体艺术家和设计师。刷新页面以随机抓取新视效。
     </p>
   </div>
   <div class="secondRow">
@@ -41,12 +41,11 @@
 <script type="text/javascript">
   // list links here
   var myArray = [
-    "/page/main/cuts.html",
-    // "/page/main/cuts-float.html",
+    "/page/main/colour-cuts.html",
+    "/page/main/edgy-sphere.html",    
+    "/page/main/planet-nora.html",
     "/page/main/square-pixels.html",
-    "/page/main/cards.html",
-    // "/page/main/center-blue-green.html",
-    // "/page/main/center-zoomed.html",
+    "/page/main/pattern-cards.html",
     "/page/main/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
