--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -35,25 +35,25 @@
 <h2 class="en indent">Pattern Cards</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/cards.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/main/pattern-cards.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/main/cards.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/main/pattern-cards.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/main/cards.html"></iframe>
+  <iframe src="/page/main/pattern-cards.html"></iframe>
 </div>
 
-<h2 class="en indent">Cuts</h2>
-<h2 class="zh indent">Cuts</h2>
+<h2 class="en indent">Colour Cuts</h2>
+<h2 class="zh indent">色彩切</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/cuts.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/main/colour-cuts.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/main/cuts.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/main/colour-cuts.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/main/cuts.html"></iframe>
+  <iframe src="/page/main/colour-cuts.html"></iframe>
 </div>
 
 <h2 class="en indent">Square Pixels</h2>
