--- a/index.html
+++ b/index.html
@@ -43,7 +43,7 @@
   var myArray = [
     "/page/main/colour-cuts.html",
     "/page/main/edgy-sphere.html",    
-    "/page/main/planet-nora.html",
+    "/page/main/planet-dora.html",
     "/page/main/square-pixels.html",
     "/page/main/pattern-cards.html",
     "/page/main/synsol-gradient.html",
