--- a/index.html
+++ b/index.html
@@ -44,6 +44,7 @@
     "/page/main/colour-cuts.html",
     "/page/main/edgy-sphere.html",    
     "/page/main/planet-dora.html",
+    "/page/main/ring-hug.html",
     "/page/main/square-pixels.html",
     "/page/main/pattern-cards.html",
     "/page/main/synsol-gradient.html",
