--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     "/page/main/edgy-sphere.html",    
     "/page/main/planet-dora.html",
     "/page/main/ring-hug.html",
-    "/page/main/pattern-cards.html",
+    // "/page/main/pattern-cards.html",
     "/page/main/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
