--- a/index.html
+++ b/index.html
@@ -42,6 +42,7 @@
   // list links here
   var myArray = [
     "/page/main/colour-cuts.html",
+    "/page/main/colour-cuts-float.html",
     "/page/main/edgy-sphere.html",    
     "/page/main/planet-dora.html",
     "/page/main/ring-hug.html",
