--- a/index.html
+++ b/index.html
@@ -41,13 +41,13 @@
 <script type="text/javascript">
   // list links here
   var myArray = [
-    "/page/main/colour-cuts.html",
-    "/page/main/colour-cuts-float.html",
-    "/page/main/edgy-sphere.html",    
-    "/page/main/planet-dora.html",
-    "/page/main/ring-hug.html",
-    // "/page/main/pattern-cards.html",
-    "/page/main/synsol-gradient.html",
+    "/page/colour-cuts.html",
+    "/page/colour-cuts-float.html",
+    "/page/edgy-sphere.html",    
+    "/page/planet-dora.html",
+    "/page/ring-hug.html",
+    // "/page/pattern-cards.html",
+    "/page/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
   document.getElementById('display').src = randomUrl;
