--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -28,32 +28,32 @@
 <h1 class="zh">微型网页</h1>
 
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/main/synsol-gradient.html"></iframe>
+  <iframe src="/page/synsol-gradient.html"></iframe>
 </div>
 </main>
 
 <h2 class="en indent">Pattern Cards</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/pattern-cards.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/pattern-cards.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/main/pattern-cards.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/pattern-cards.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/main/pattern-cards.html"></iframe>
+  <iframe src="/page/pattern-cards.html"></iframe>
 </div>
 
 <h2 class="en indent">Colour Cuts</h2>
 <h2 class="zh indent">色彩切</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/main/colour-cuts.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/colour-cuts.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/main/colour-cuts.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/colour-cuts.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/main/colour-cuts.html"></iframe>
+  <iframe src="/page/colour-cuts.html"></iframe>
 </div>
 
 <div class="pageDivider"></div>
