--- a/work/visual-weather.html
+++ b/work/visual-weather.html
@@ -28,7 +28,7 @@
 <h1 class="zh">可视天气</h1>
 
 <div class="iframeWrapper iframe60 iframexto110">
-  <iframe src="/page/city.html"></iframe>
+  <iframe src="/page/visual-weather.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate its visuals.</h6>
 <h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉输出。</h6>
