--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     "/page/edgy-sphere.html",    
     "/page/planet-dora.html",
     "/page/ring-hug.html",
-    // "/page/pattern-cards.html",
+    "/page/rings.html",
     "/page/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
