--- a/index.html
+++ b/index.html
@@ -41,12 +41,12 @@
 <script type="text/javascript">
   // list links here
   var myArray = [
-    "/page/colour-cuts.html",
-    "/page/colour-cuts-float.html",
+    "/page/colour-cut.html",
+    "/page/colour-cut-float.html",
     "/page/edgy-sphere.html",    
     "/page/planet-dora.html",
     "/page/ring-hug.html",
-    "/page/rings.html",
+    "/page/ring.html",
     "/page/synsol-gradient.html",
   ];
   var randomUrl = myArray[Math.floor(Math.random() * myArray.length)];
