--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -32,28 +32,28 @@
 </div>
 </main>
 
-<h2 class="en indent">Pattern Cards</h2>
+<h2 class="en indent">Pattern Card</h2>
 <h2 class="zh indent">图纹卡片</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/pattern-cards.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/pattern-card.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/pattern-cards.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/pattern-card.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/pattern-cards.html"></iframe>
+  <iframe src="/page/pattern-card.html"></iframe>
 </div>
 
-<h2 class="en indent">Colour Cuts</h2>
+<h2 class="en indent">Colour Cut</h2>
 <h2 class="zh indent">色彩切</h2>
 <p class="en indent bodyText">
-  Please click <a href="/page/colour-cuts.html" target="_blank">here</a> to visit to the site full-screen.
+  Please click <a href="/page/colour-cut.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/colour-cuts.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/colour-cut.html" target="_blank">此处</a>以跳转到该网页。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
-  <iframe src="/page/colour-cuts.html"></iframe>
+  <iframe src="/page/colour-cut.html"></iframe>
 </div>
 
 <div class="pageDivider"></div>
