--- a/work/visual-weather.html
+++ b/work/visual-weather.html
@@ -31,7 +31,7 @@
   <iframe src="/page/visual-weather.html"></iframe>
 </div>
 <h6 class="en imgDescription">△ Type in name of a city in English and click the search button to generate its visuals.</h6>
-<h6 class="zh imgDescription">△ 用英文输入城市名称，然后单击“搜索”以获取视觉输出。</h6>
+<h6 class="zh imgDescription">△ 用英文输入国外城市名，以拼音输入国内城市名，然后点击搜索按钮生成相应模型。</h6>
 </main>
 
 <p class="en indent bodyText">
