--- a/navigation.html
+++ b/navigation.html
@@ -186,7 +186,7 @@
     <p class="zh"><a href="/work/peacebird.html">- 太平鸟</a></p>
 
     <p class="en"><a href="/work/byton.html">- Byton</a></p>
-    <p class="zh"><a href="/work/byton.html">- 拜腾汽车</a></p>
+    <p class="zh"><a href="/work/byton.html">- 拜腾</a></p>
     <br>
 
     <p class="en type">Graphic Design:</p>
