--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -44,6 +44,18 @@
   <iframe src="/page/pattern-card.html"></iframe>
 </div>
 
+<h2 class="en indent">Gradient Arc</h2>
+<h2 class="zh indent">弧形渐变</h2>
+<p class="en indent bodyText">
+  Please click <a href="/page/gradient-arc.html" target="_blank">here</a> to visit to the site full-screen.
+</p>
+<p class="zh indent bodyText">
+  请点击<a href="/page/gradient-arc.html" target="_blank">此处</a>以跳转到该网页。
+</p>
+<div class="iframeWrapper iframe60 iframexto100">
+  <iframe src="/page/gradient-arc.html"></iframe>
+</div>
+
 <h2 class="en indent">Colour Cut</h2>
 <h2 class="zh indent">色彩切</h2>
 <p class="en indent bodyText">
