--- a/work/mini-sites.html
+++ b/work/mini-sites.html
@@ -38,7 +38,7 @@
   Please click <a href="/page/pattern-card.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/pattern-card.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/pattern-card.html" target="_blank">此处</a>以跳转到该页面。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/pattern-card.html"></iframe>
@@ -50,7 +50,7 @@
   Please click <a href="/page/gradient-arc.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/gradient-arc.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/gradient-arc.html" target="_blank">此处</a>以跳转到该页面。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/gradient-arc.html"></iframe>
@@ -62,7 +62,7 @@
   Please click <a href="/page/colour-cut.html" target="_blank">here</a> to visit to the site full-screen.
 </p>
 <p class="zh indent bodyText">
-  请点击<a href="/page/colour-cut.html" target="_blank">此处</a>以跳转到该网页。
+  请点击<a href="/page/colour-cut.html" target="_blank">此处</a>以跳转到该页面。
 </p>
 <div class="iframeWrapper iframe60 iframexto100">
   <iframe src="/page/colour-cut.html"></iframe>
