--- a/navigation.html
+++ b/navigation.html
@@ -26,7 +26,7 @@
 
 
 <!-- home button (nora zhao) ---------------------------------------- -->
-<img id="homeBtn" onclick="window.location.href='/index.html';" src="/img/icon/norazhao.svg" alt="Home">
+<img id="homeBtn" onclick="window.location.href='/';" src="/img/icon/norazhao.svg" alt="Home">
 
 <style>
     #homeBtn {
@@ -153,8 +153,8 @@
     <!-- contents ---------------------------------------- -->
     <div style="margin-top: 2vh;"></div>
 
-    <p class="en"><a href="/index.html">Home Page</a></p>
-    <p class="zh"><a href="/index.html">主页</a></p>
+    <p class="en"><a href="/">Home Page</a></p>
+    <p class="zh"><a href="/">主页</a></p>
 
     <p class="en"><a href="/about-and-contact.html">About and Contact</a></p>
     <p class="zh"><a href="/about-and-contact.html">简介及联系方式</a></p>
