--- a/work/books-and-booklets.html
+++ b/work/books-and-booklets.html
@@ -65,6 +65,7 @@
   <img src="/img/emotional-words/4.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/5.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
   <img src="/img/emotional-words/6.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
+  <img src="/img/emotional-words/7.jpg" alt="EMOTIONAL WORDS BOOKLET 情感单词手册 · NORA ZHAO 赵子娴">
 </div>
 
 <h2 class="en indent">Machine Translation</h2>
