--- a/work/books-and-booklets.html
+++ b/work/books-and-booklets.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>BOOKS & BOOKLETS 书籍和小册子BOOKS & BOOKLETS 书籍和小册子 · NORA ZHAO 赵子娴</title>
+<title>BOOKS & BOOKLETS 书籍和小册子 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
