--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -28,7 +28,7 @@
 <h1 class="zh">述信科技</h1>
 
 <div class="grid1">
-  <img src="/img/omdia/cover.png" alt="OMDIA LOGO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/logo.png" alt="SHUINFO LOGO · NORA ZHAO 赵子娴">
 </div>
 </main>
 
@@ -61,7 +61,7 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/omdia/guidelines.jpg" alt="OMDIA BRAND GUIDELINES · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test2.png" alt="SHUINFO BRAND GUIDELINES · NORA ZHAO 赵子娴">
 </div>
 
 <p class="en indent bodyText">
@@ -73,10 +73,11 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/omdia/report1.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/report2.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/report3.jpg" alt="OMDIA REPORT COVER DESIGN · NORA ZHAO 赵子娴">
-  <img src="/img/omdia/leaflet.jpg" alt="OMDIA LEAFLET DESIGN · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test3.png" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test4.png" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test5.png" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test6.png" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/test7.png" alt="SHUINFO · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
