--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -61,24 +61,31 @@
 </p>
 
 <div class="grid1">
-  <img src="/img/shuinfo/test2.png" alt="SHUINFO BRAND GUIDELINES · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/1.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/0.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
 </div>
 
 <p class="en indent bodyText">
-  Lorem ipsum.
+  The logo is a direct interpretation of SHUINFO's brand idea of ‘bridging your digital future’. The letter ‘H’ has been used to create the company symbol that represents its ability to bring two worlds together — the clients' world and the world of digital platforms. This unique logotype is not only the company name but also contains the company symbol.
+  <br>
+  Similarly, we have also applied isolation of areas and connections in between to show SHUINFO's brand idea visually through various applications.
 </p>
-
 <p class="zh indent bodyText">
-  假文
+  述信科技的品牌标识是对“桥接您的数字未来”品牌理念的直接诠释，“H”字标代表着述信将客户世界和数字平台世界这两者联结在一起的能力。所构造的品牌标识不但显示了公司名称，还包含了公司的特有符号，可以同时达到很强的信息传达和视觉特异性的效果。
+  <br>
+  同样地，在各种应用物中，我们也通过不同区块的分割和联结，以视觉化的语言和形式展现着述信科技的品牌理念。
 </p>
 
 <div class="grid1">
-  <img src="/img/shuinfo/test3.png" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/test4.png" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/test5.png" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/test6.png" alt="SHUINFO · NORA ZHAO 赵子娴">
-  <img src="/img/shuinfo/test7.png" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/2.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/8.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/7.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/9.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
+  <img src="/img/shuinfo/11.jpg" alt="SHUINFO · NORA ZHAO 赵子娴">
 </div>
+
+
+
 
 <div class="pageDivider"></div>
 
