--- a/navigation.html
+++ b/navigation.html
@@ -182,6 +182,9 @@
     <p class="en"><a href="/work/omdia.html">- Omdia</a></p>
     <p class="zh"><a href="/work/omdia.html">- Omdia</a></p>
 
+    <p class="en"><a href="/work/shuinfo.html">- SHUINFO</a></p>
+    <p class="zh"><a href="/work/shuinfo.html">- 述信科技</a></p>
+
     <p class="en"><a href="/work/peacebird.html">- Peacebird</a></p>
     <p class="zh"><a href="/work/peacebird.html">- 太平鸟</a></p>
 
