--- a/work/chinese-grid.html
+++ b/work/chinese-grid.html
@@ -76,11 +76,9 @@
 <h6 class="en imgDescription">△ Application of the grid system on a piece of text (excerpt from "Short Song Style" by Cao Cao).</h6>
 <h6 class="zh imgDescription">△ 该网格系统在一段诗文上的应用（节选自曹操的《短歌行》）。</h6>
 
-<div class="grid2 gridxto1">
+<div class="grid1">
   <img src="/img/chinese-grid/3.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
   <img src="/img/chinese-grid/4.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
-  <img src="/img/chinese-grid/5.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
-  <img src="/img/chinese-grid/6.jpg" alt="CHINESE GRID POSTER DESIGN 中文字形网格海报设计 · NORA ZHAO 赵子娴">
 </div>
 
 <div class="pageDivider"></div>
