--- a/work/ef-ap.html
+++ b/work/ef-ap.html
@@ -18,10 +18,10 @@
 
 <main>
 <p class="en indent headerText">
-  A thesis which explores the expanded field of architectural publishing.
+  Set the layout of a thesis which explores the expanded field of architectural publishing.
 </p>
 <p class="zh indent headerText">
-  一篇探讨建筑出版的扩展领域的论文。
+  探讨建筑出版扩展领域论文的页面排版设计。
 </p>
 
 <h1 class="en">EF-AP</h1>
