--- a/work/omdia.html
+++ b/work/omdia.html
@@ -21,7 +21,7 @@
   Brand identity framework for a global technology research powerhouse.
 </p>
 <p class="zh indent headerText">
-  为一家全球领先的技术研究机构设计品牌识别系统框架。
+  一家全球领先的技术研究机构的品牌识别系统框架。
 </p>
 
 <h1 class="en">Omdia</h1>
