--- a/work/peacebird.html
+++ b/work/peacebird.html
@@ -21,7 +21,7 @@
   A refreshed visual identity for one of the best selling Chinese fashion brands.
 <p>
 <p class="zh indent headerText">
-  为一家中国时尚品牌进行视觉识别更新。
+  太平鸟服饰的品牌视觉识别更新。
 <p>
 
 <h1 class="en">Peacebird</h1>
