--- a/work/shuinfo.html
+++ b/work/shuinfo.html
@@ -3,7 +3,7 @@
 <head>
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1">
-<title>SHU INFO 述信科技 · NORA ZHAO 赵子娴</title>
+<title>SHUINFO 述信 · NORA ZHAO 赵子娴</title>
 <link rel="stylesheet" type="text/css" href="/style.css">
 <script src="/js/jquery.min.js"></script>
 </head>
@@ -25,7 +25,7 @@
 </p>
 
 <h1 class="en">SHUINFO</h1>
-<h1 class="zh">述信科技</h1>
+<h1 class="zh">述信</h1>
 
 <div class="grid1">
   <img src="/img/shuinfo/logo.png" alt="SHUINFO LOGO · NORA ZHAO 赵子娴">
@@ -47,7 +47,7 @@
 </p>
 
 <p class="zh indent bodyText">
-  客户：述信科技
+  客户：述信
   <br class="listBreak">
   地点：中国上海
   <br class="listBreak">
@@ -71,9 +71,9 @@
   Similarly, we have also applied isolation of areas and connections in between to show SHUINFO's brand idea visually through various applications.
 </p>
 <p class="zh indent bodyText">
-  述信科技的品牌标识是对“桥接您的数字未来”品牌理念的直接诠释，“H”字标代表着述信将客户世界和数字平台世界这两者联结在一起的能力。所构造的品牌标识不但显示了公司名称，还包含了公司的特有符号，可以同时达到很强的信息传达和视觉特异性的效果。
+  述信的品牌标识是对“桥接您的数字未来”品牌理念的直接诠释，“H”字标代表着述信将客户世界和数字平台世界这两者联结在一起的能力。所构造的品牌标识不但显示了公司名称，还包含了公司的特有符号，可以同时达到很强的信息传达和视觉特异性的效果。
   <br>
-  同样地，在各种应用物中，我们也通过不同区块的分割和联结，以视觉化的语言和形式展现着述信科技的品牌理念。
+  同样地，在各种应用物中，我们也通过不同区块的分割和联结，以视觉化的语言和形式传达述信的品牌理念。
 </p>
 
 <div class="grid1">
