--- a/work/byton.html
+++ b/work/byton.html
@@ -73,7 +73,7 @@
 <div class="grid1">
   <img src="/img/byton/desktop.jpg" alt="BYTON DESKTOP WEBSITE UI DESIGN 拜腾网站界面设计 · NORA ZHAO 赵子娴">
   <img src="/img/byton/ui.jpg" alt="BYTON MOBILE APP UI DESIGN 拜腾APP界面设计 · NORA ZHAO 赵子娴">
-  <img src="/img/byton/store-front.jpg" alt="BYTON STORE FRONT DESIGN 拜腾店面门头设计 · NORA ZHAO 赵子娴">
+  <img src="/img/byton/store.jpg" alt="BYTON STORE FRONT DESIGN 拜腾店面门头设计 · NORA ZHAO 赵子娴">
   <img src="/img/byton/bag.jpg" alt="BYTON BAG DESIGN 拜腾手提袋设计 · NORA ZHAO 赵子娴">
   <img src="/img/byton/card.jpg" alt="BYTON BUSINESS CARD DESIGN 拜腾名片设计 · NORA ZHAO 赵子娴">
 </div>
