--- a/work/rtw.html
+++ b/work/rtw.html
@@ -47,7 +47,7 @@
   <br class="listBreak">
   Type: collaborative project
   <br class="dividerLine">
-  RTW is an apperal brand which stives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
+  RTW is an apperal brand which strives to deliver better quality products at an honest price, by considering what truely matters to the customers from materials and manufacturing to the sales channels.
   <br>
   Various colours add differentiation and vibrance to the brand expression, and can be found in applications throughout the system.
 </p>
